# hello-haskell

./: hello.cabal  stack.yaml
exe/: Main.hs
src/: DogsRule.hs
