name:                hello
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/haskellbook/hello#readme
license:             BSD3
license-file:        LICENSE
author:              Neill Robson
maintainer:          neill@neillrobson.com
copyright:           2023, Neill Robson
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hello
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hello

library
  hs-source-dirs:      src
  exposed-modules:     Hello
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
